<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_developers">"Kiva for Maintaining
Crixec for Icon Design
CoolApk User @NimaQu for providing server
QQ User @My for providing free network"</string>
    <string name="about_developers_label">Developers &amp; Contributors</string>
    <string name="about_libraries_label">Libraries</string>
    <string name="about_reset_label">Reset App</string>
    <string name="about_reset_label_desc">Clear all files except user home directory</string>
    <string name="about_source_label">Source Code</string>
    <string name="about_version_label">Version</string>
    <string name="accel_fast">Fast</string>
    <string name="accel_fixed_horiz">Fixed to table desk orientation</string>
    <string name="accel_fixed_start">Fixed when application starts</string>
    <string name="accel_floating">Floating</string>
    <string name="accel_medium">Medium</string>
    <string name="accel_question">Accelerometer sensitivity</string>
    <string name="accel_question_center">Accelerometer center position</string>
    <string name="accel_slow">Slow</string>
    <string name="accel_veryfast">Very fast</string>
    <string name="accel_veryslow">Very slow</string>
    <string name="accessing_network">Accessing network, please wait</string>
    <string name="advanced">Advanced features</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">NetHunter Terminal</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apt_update_ok">Package list successfully updated</string>
    <string name="apt_upgrade_ok">Package successfully upgraded</string>
    <string name="audiobuf_large">Large (older devices, if sound is choppy)</string>
    <string name="audiobuf_medium">Medium</string>
    <string name="audiobuf_question">Size of audio buffer</string>
    <string name="audiobuf_small">Small</string>
    <string name="audiobuf_verysmall">Very small (fast devices, less lag)</string>
    <string name="available_user_scripts">Available User Scripts</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="calibrate_gyroscope">Calibrate gyroscope</string>
    <string name="calibrate_gyroscope_not_supported">Your device does not have gyroscope</string>
    <string name="calibrate_gyroscope_text">Put your device on a flat surface</string>
    <string name="calibrate_touchscreen">Calibrate touchscreen</string>
    <string name="calibrate_touchscreen_touch">Touch all edges of the screen, press BACK when done</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download">Cancel data downloading?</string>
    <string name="cancel_download_resume">You can resume it later, the data will not be downloaded twice.</string>
    <string name="channel_alpha">A</string>
    <string name="channel_blue">B</string>
    <string name="channel_green">G</string>
    <string name="channel_hue">H</string>
    <string name="channel_lightness">L</string>
    <string name="channel_red">R</string>
    <string name="channel_saturation">S</string>
    <string name="channel_value">V</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_with_dpadcenter">Left mouse click with trackball / joystick center</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="command_display_title_cannot_be_null">Display title cannot be null</string>
    <string name="command_shortcut">Command Shortcut</string>
    <string name="command_shortcut_command">Command</string>
    <string name="command_shortcut_display_title">Title</string>
    <string name="confirm_remove">Remove?</string>
    <string name="confirm_remove_file_from_list">Remove file from list?</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="controls_accel">Accelerometer</string>
    <string name="controls_accelnav">Accelerometer</string>
    <string name="controls_additional">Additional controls</string>
    <string name="controls_arrows">Arrows / joystick / dpad</string>
    <string name="controls_question">What kind of navigation keys does your device have?</string>
    <string name="controls_screenkb">On-screen screenKeyboard</string>
    <string name="controls_screenkb_by">%1$s by %2$s</string>
    <string name="controls_screenkb_custom">Custom</string>
    <string name="controls_screenkb_drawsize">Size of button images</string>
    <string name="controls_screenkb_large">Large</string>
    <string name="controls_screenkb_medium">Medium</string>
    <string name="controls_screenkb_size">On-screen screenKeyboard size</string>
    <string name="controls_screenkb_small">Small</string>
    <string name="controls_screenkb_theme">On-screen screenKeyboard theme</string>
    <string name="controls_screenkb_tiny">Tiny</string>
    <string name="controls_screenkb_trans_0">Invisible</string>
    <string name="controls_screenkb_trans_1">Almost invisible</string>
    <string name="controls_screenkb_trans_2">Transparent</string>
    <string name="controls_screenkb_trans_3">Semi-transparent</string>
    <string name="controls_screenkb_trans_4">Non-transparent</string>
    <string name="controls_screenkb_transparency">On-screen screenKeyboard transparency</string>
    <string name="controls_touch">Touchscreen only</string>
    <string name="controls_trackball">Trackball</string>
    <string name="copy">Copy</string>
    <string name="copy_text">Copy</string>
    <string name="crash_app">App: %s</string>
    <string name="crash_model">Model: %s</string>
    <string name="crash_stack_trace">Stack Trace</string>
    <string name="customization_settings">Customization</string>
    <string name="customization_settings_desc">Font, ColorScheme</string>
    <string name="dangerous_zone">Danger Zone</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_source_url">http://http.kali.org/kali</string>
    <string name="device_change_cfg">Change device configuration</string>
    <string name="device_config">Device configuration</string>
    <string name="device_type">phone</string>
    <string name="discard_changes">Discard all changes?</string>
    <string name="display_size">Display size for mouse emulation</string>
    <string name="display_size_desktop">Desktop, no emulation</string>
    <string name="display_size_large">Large (tablets)</string>
    <string name="display_size_mouse">Mouse emulation mode</string>
    <string name="display_size_small">Small, magnifying glass</string>
    <string name="display_size_small_touchpad">Small, touchpad mode</string>
    <string name="display_size_tiny">Tiny</string>
    <string name="display_size_tiny_touchpad">Tiny, touchpad mode</string>
    <string name="dl_finished">Finished</string>
    <string name="dl_from">Downloading data from %s</string>
    <string name="dl_progress">%1$.0f%% done: file %2$s</string>
    <string name="done">Done</string>
    <string name="download_unneeded">No need to download</string>
    <string name="downloads">Downloads</string>
    <string name="error">Oops!</string>
    <string name="error_connecting_to">Error connecting to %s</string>
    <string name="error_dl_from">Error downloading data from %s</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_new_source_repo">Repo cannot be empty</string>
    <string name="error_new_source_url">URL cannot be empty</string>
    <string name="error_write">Error writing to %s</string>
    <string name="exit">Exit</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_connecting_to">Failed connecting to %s</string>
    <string name="faq">FAQ</string>
    <string name="files_to_handle">Files to Handle</string>
    <string name="float_up">Float Up</string>
    <string name="fullscreen_mode_changed">FullScreen mode changed, please restart NH-Terminal.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>
    <string name="general_settings">General Settings</string>
    <string name="general_settings_desc">Bell, Vibrate, Shell, Initial Command</string>
    <string name="google_play_game_services_app_id">==GOOGLEPLAYGAMESERVICES_APP_ID==</string>
    <string name="older_customization_settings_desc">Disabled as of no required functions available by old android api</string>
    <string name="ui_settings">UI Settings</string>
    <string name="ui_settings_desc">FullScreen, Title Bar, Animation</string>
</resources>