<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:icon="@drawable/ic_general_white_36dp" android:title="@string/general_settings" android:summary="@string/general_settings_desc">
        <intent android:targetPackage="com.offsec.nhterm" android:targetClass="com.offsec.nhterm.ui.settings.GeneralSettingsActivity" />
    </Preference>
    <Preference android:icon="@drawable/ic_ui_white_36dp" android:title="@string/ui_settings" android:summary="@string/ui_settings_desc">
        <intent android:targetPackage="com.offsec.nhterm" android:targetClass="com.offsec.nhterm.ui.settings.UISettingsActivity" />
    </Preference>
    <Preference android:icon="@drawable/ic_customization_white_36dp" android:enabled="false" android:title="@string/customization_settings" android:summary="@string/older_customization_settings_desc">
        <intent android:targetPackage="com.offsec.nhterm" android:targetClass="com.offsec.nhterm.ui.customize.CustomizeActivity" />
    </Preference>
    <Preference android:icon="@drawable/ic_info_white_36dp" android:title="@string/about">
        <intent android:targetPackage="com.offsec.nhterm" android:targetClass="com.offsec.nhterm.ui.other.AboutActivity" />
    </Preference>
</PreferenceScreen>
