<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="@style/ThemeOverlay.AppCompat.Dark" android:id="@id/about_toolbar" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
    <ScrollView android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@android:id/content" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:cardBackgroundColor="@color/list_download_item_color_dark" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
                    <LinearLayout android:orientation="horizontal" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip">
                        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_launcher_foreground" android:scaleType="center" />
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:textSize="22.0sp" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/about_version_view" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" app:srcCompat="@drawable/ic_info" />
                        <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginStart="32.0dip">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_version_label" />
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/about_licenses_view" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/md_list_item_height">
                        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" app:srcCompat="@drawable/ic_description" />
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:text="@string/about_libraries_label" android:layout_marginStart="32.0dip" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/about_source_code_view" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" app:srcCompat="@drawable/ic_github" />
                        <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginStart="32.0dip">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_source_label" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" app:cardBackgroundColor="@color/list_download_item_color_dark" app:cardUseCompatPadding="true">
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
                    <LinearLayout android:orientation="horizontal" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="72.0dip">
                        <ImageView android:layout_gravity="center_vertical" android:layout_width="48.0dip" android:layout_height="48.0dip" android:scaleType="centerCrop" app:srcCompat="@mipmap/ic_danger" />
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:layout_gravity="center_vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dangerous_zone" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/about_reset_app_view" android:background="?selectableItemBackground" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip">
                        <ImageView android:layout_width="24.0dip" android:layout_height="24.0dip" app:srcCompat="@drawable/ic_info" />
                        <LinearLayout android:orientation="vertical" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginStart="32.0dip">
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_reset_label" />
                            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_reset_label_desc" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
